<resources>
    <string name="app_name">Looking for the cost</string>
    <string name="tag1">ЖКХ</string>
    <string name="tag2">АРЕНДА</string>
    <string name="tag3">КРЕДИТЫ</string>
    <string name="tag4">ОБУЧЕНИЕ</string>
    <string name="tag5">связь/интернет</string>
    <string name="tag6">ТРАНСПОРТ</string>
    <string name="tag7">МЕДИЦИНА</string>
    <string name="tag8">ПИТАНИЕ</string>
    <string name="tag10">ПОКУПКИ</string>
    <string name="tag11">НАКОПЛЕНИЯ</string>
    <string name="tag9">РАЗВЛЕЧЕНИЯ</string>
    <string name="str1">Уведомления</string>
    <string name="mainText">Ваши расходы</string>
    <string name="header2">Необходимые расходы</string>
    <string name="header1">Необязательные расходы</string>
    <string name="nameVariable">Планируемый бюджет:</string>
    <string name="nameVariable2">Остаток от бюджета:</string>
    <string name="nameVariable3">Бюджет:</string>
    <string name="nameVariable4">Остаток:</string>
    <string name="nameVariable5">Новая категория</string>
    <string name="nameCheckBox">Необходимые траты</string>
    <string name="nameCheckBox2">Необязательные траты</string>

    <string-array name="hour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>00</item>
    </string-array>
    <string-array name="minute">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="mainCurrency">руб.</string>
    <string name="buttonName">Мои расходы</string>
    <string name="buttonName2">Мой план</string>
    <string name="inputText">Наименование траты</string>
    <string name="inputText2">Сумма</string>
    <string name="inputTextExpenses">Наименование траты</string>
    <string name="inputNameExpenses">Сумма</string>

</resources>
