<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.create_category.CreateCategory">


    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Button>


    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tag1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/tag1"
                android:textSize="15sp">
            </TextView>
             <TextView
                android:id="@+id/tag2"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/tag2"
                android:textSize="15sp">
            </TextView>
             <TextView
                android:id="@+id/tag3"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/tag3"
                android:textSize="15sp">
            </TextView>
            <TextView
                android:id="@+id/tag4"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/tag4"
                android:textSize="15sp">
            </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tag5"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/tag5"
                android:textSize="13sp">
            </TextView>
             <TextView
                android:id="@+id/tag6"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginLeft="8dp"
                android:text="@string/tag6"
                android:textSize="10sp"
                 android:layout_marginStart="8dp">
            </TextView>
             <TextView
                android:id="@+id/tag7"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/tag7"
                android:textSize="12sp">
            </TextView>
            <TextView
                android:id="@+id/tag8"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/tag8"
                android:textSize="13sp">
            </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tag9"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="РАЗВЛЕЧЕНИЯ"
                android:textSize="11sp">
            </TextView>
             <TextView
                android:id="@+id/tag10"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginLeft="8dp"
                android:text="@string/tag10"
                android:textSize="14sp"
                 android:layout_marginStart="8dp">
            </TextView>
             <TextView
                android:id="@+id/tag11"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/tag11"
                android:textSize="12sp">
            </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </LinearLayout>



</LinearLayout>