<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.expenses.CreateExpensesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:menu="@menu/menu_create_category" />


    <LinearLayout
        style="@style/LayoutVertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/background">

        <LinearLayout
            style="@style/LayoutHorizontal"
            android:layout_weight="1">

            <EditText
                android:id="@+id/nameExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:hint="@string/inputTextExpenses" />
        </LinearLayout>

        <LinearLayout
            style="@style/LayoutHorizontal"
            android:layout_weight="1">

            <EditText
                android:id="@+id/sumExpenses"
                style="@style/sumValueInput"
                android:layout_marginLeft="100dp"
                android:hint="@string/inputNameExpenses" />

            <TextView
                style="@style/mainCurrency"
                android:text="@string/mainCurrency"></TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>