<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".screens.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:menu="@menu/main_menu" />

        <TextView
            style="@style/Header"
            android:layout_gravity="left"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="2"
            android:gravity="bottom"
            android:text="@string/mainText"
          />

        <LinearLayout
            style="@style/LayoutHorizontal"
            android:layout_height="0dp"
            android:layout_weight="7">

            <LinearLayout
                style="@style/StatusLayout"
                android:background="@drawable/background_necessary">

                <TextView
                    style="@style/middleText"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/header2"
                  ></TextView>

                <LinearLayout style="@style/layoutVariable">

                    <TextView
                        android:id="@+id/NecassaryBudget"
                        style="@style/smallText"
                        android:text="@string/nameVariable3"
                      ></TextView>

                </LinearLayout>

                <LinearLayout
                    style="@style/layoutVariable"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/remainsNecassary"
                        style="@style/smallText"
                        android:text="@string/nameVariable4"
                       ></TextView>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                style="@style/StatusLayout"
                android:background="@drawable/background_optional">

                <TextView
                    style="@style/middleText"
                    android:layout_marginTop="20dp"
                    android:text="@string/header1">

                </TextView>


                <LinearLayout style="@style/layoutVariable">

                    <TextView
                        android:id="@+id/optionalBudget"
                        style="@style/smallText"
                        android:text="@string/nameVariable3"></TextView>

                </LinearLayout>

                <LinearLayout
                    style="@style/layoutVariable"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/remainsOptional"
                        style="@style/smallText"
                        android:text="@string/nameVariable4"></TextView>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimaryLight" />

        <LinearLayout
            style="@style/LayoutVertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape">

            <Button
                android:id="@+id/mySpending"
                style="@style/AppTheme2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="Мои расходы" />

            <Button
                android:id="@+id/myPlan"
                style="@style/AppTheme2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:text="Мой план" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>